--- a/src/pipelines/dune
+++ b/src/pipelines/dune
@@ -4,6 +4,6 @@
  (name mirage_ci_pipelines)
  (libraries mirage_ci_lib current current.cache current_github current_git
    current_web current_docker astring dockerfile cmdliner fmt.tty logs.fmt
-   lwt lwt.unix obuilder-spec opam-file-format)
+   lwt lwt.unix obuilder-spec opam-file-format lambdasoup str)
  (preprocess
   (pps ppx_deriving_yojson)))
