--- a/src/solver/dune
+++ b/src/solver/dune
@@ -3,5 +3,7 @@
  (public_name mirage-ci-solver)
  (preprocess
   (pps ppx_deriving.std ppx_deriving_yojson))
- (libraries lwt.unix solver_api ppx_deriving_yojson.runtime opam-0install
-   capnp-rpc-unix git-unix))
+ (libraries lwt lwt.unix solver_api opam-file-format opam-format opam-state
+   opam-core fpath fmt result digestif git ppx_deriving_yojson.runtime
+   opam-0install capnp-rpc-unix capnp-rpc-lwt logs astring capnp-rpc
+   capnp-rpc-net mirage-flow git-unix))
