refactor to add local testing

--- a/src/lib/common/dune
+++ b/src/lib/common/dune
@@ -2,7 +2,8 @@
 
 (library
  (name common)
- (libraries ocluster-api bos result current current_git fmt obuilder-spec
+ (libraries ocluster-api bos cmdliner capnp-rpc-unix result current
+   current_git current_docker current.fs fpath fmt obuilder-spec
    current_ocluster)
  (preprocess
   (pps ppx_deriving_yojson ppx_deriving.std)))
