--- a/src/dune
+++ b/src/dune
@@ -4,14 +4,42 @@
  (public_name mirage-ci)
  (name mirage_ci)
  (modules mirage_ci logging)
- (libraries common monorepo_lib mirage_ci_pipelines duration capnp-rpc-unix
-   current current.cache current_git current_github current_web
-   current_ocluster routes cmdliner fmt.tty logs.fmt lwt lwt.unix))
+ (libraries
+  common
+  monorepo_lib
+  mirage_ci_pipelines
+  duration
+  capnp-rpc-unix
+  current
+  current.cache
+  current_git
+  current_github
+  current_web
+  current_ocluster
+  routes
+  cmdliner
+  fmt.tty
+  logs.fmt
+  lwt
+  lwt.unix
+  current_docker))
 
 (executable
  (public_name mirage-ci-local)
  (name mirage_ci_local)
  (modules mirage_ci_local logging_local)
- (libraries common mirage_ci_pipelines duration current current.cache
-   current_git current_github current_web astring cmdliner fmt.tty logs.fmt
-   lwt lwt.unix))
+ (libraries
+  common
+  mirage_ci_pipelines
+  duration
+  current
+  current.cache
+  current_git
+  current_github
+  current_web
+  astring
+  cmdliner
+  fmt.tty
+  logs.fmt
+  lwt
+  lwt.unix))
