--- a/src/dune
+++ b/src/dune
@@ -7,7 +7,7 @@
  (libraries common monorepo_lib mirage_ci_pipelines duration capnp-rpc-unix
    current current.cache current_git current_github current_web
    current_ocluster routes cmdliner fmt.tty logs.fmt lwt lwt.unix
-   current_docker))
+   current_docker website))
 
 (executable
  (public_name mirage-ci-local)
@@ -15,4 +15,4 @@
  (modules mirage_ci_local logging_local)
  (libraries common mirage_ci_pipelines duration current current.cache
    current_git current_github current_web astring cmdliner fmt.tty logs.fmt
-   lwt lwt.unix))
+   lwt lwt.unix website))
