fix wrong generated link in github commit status

--- a/src/pipelines/dune
+++ b/src/pipelines/dune
@@ -6,4 +6,4 @@
    current_github current_git current_web current_docker current_ocluster
    routes duration uri tyxml tyxml.functor astring dockerfile cmdliner
    fmt.tty logs.fmt lwt lwt.unix obuilder-spec opam-file-format lambdasoup
-   str ))
+   str website))
