--- a/src/pipelines/dune
+++ b/src/pipelines/dune
@@ -2,8 +2,8 @@
 
 (library
  (name mirage_ci_pipelines)
- (libraries current-web-pipelines common monorepo_lib current current.term current.cache
-   current_github current_git current_web current_docker current_ocluster
-   routes duration uri tyxml tyxml.functor astring dockerfile cmdliner
-   fmt.tty logs.fmt lwt lwt.unix obuilder-spec opam-file-format lambdasoup
-   str website))
+ (libraries current-web-pipelines common monorepo_lib current current.term
+   current.cache current_github current_git current_web current_docker
+   current_ocluster routes duration uri tyxml tyxml.functor astring
+   dockerfile cmdliner fmt.tty logs.fmt lwt lwt.unix obuilder-spec
+   opam-file-format lambdasoup str website))
