--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "vendor/ocluster"]
 	path = vendor/ocluster
-	url = https://github.com/TheLortex/ocluster
+	url = https://github.com/ocurrent/ocluster
 [submodule "vendor/ocurrent"]
 	path = vendor/ocurrent
-	url = https://github.com/TheLortex/ocurrent
+	url = https://github.com/ocurrent/ocurrent
 [submodule "vendor/current-web-pipelines"]
 	path = vendor/current-web-pipelines
 	url = https://github.com/TheLortex/current-web-pipelines.git
