--- a/src/api/dune
+++ b/src/api/dune
@@ -1,7 +1,14 @@
 (library
  (name solver_api)
- (libraries capnp-rpc-lwt current_rpc ppx_deriving_yojson.runtime capnp
-   stdint lwt fmt result)
+ (libraries
+  capnp-rpc-lwt
+  current_rpc
+  ppx_deriving_yojson.runtime
+  capnp
+  stdint
+  lwt
+  fmt
+  result)
  (flags
   (:standard -w -53-55))
  (preprocess
