Add missing dependencies

--- a/mirage-ci.opam
+++ b/mirage-ci.opam
@@ -45,6 +45,9 @@ depends: [
   "current_web"
   "current_git"
   "current_github"
+  "current_ocluster"
+  "current_rpc"
+  "current_docker"
   "fmt"
   "lwt"
   "cmdliner" {>= "0.9.8"}
