Fix minimal bounds

--- a/mirage-ci.opam
+++ b/mirage-ci.opam
@@ -45,7 +45,7 @@ depends: [
   "current_web"
   "current_git"
   "current_github"
-  "current_ocluster"
+  "current_ocluster" {>= "0.2"}
   "current_rpc"
   "current_docker"
   "fmt"
@@ -54,7 +54,7 @@ depends: [
   "opam-file-format"
   "lambdasoup"
   "dockerfile"
-  "obuilder-spec"
+  "obuilder-spec" {>= "0.5"}
   "opam-0install"
   "capnp-rpc-unix" {>= "1.2.3"}
   "opam-format"
