Upgrade Dockerfile to debian-12

--- a/mirage-ci.opam
+++ b/mirage-ci.opam
@@ -46,6 +46,7 @@ depends: [
   "current_git"
   "current_github"
   "current_ocluster" {>= "0.2"}
+  "ocluster-api" {>= "0.2"}
   "current_rpc"
   "current_docker"
   "current-web-pipelines"
