--- a/mirage-ci.opam
+++ b/mirage-ci.opam
@@ -78,3 +78,4 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/ocurrent/mirage-ci.git"
+available: !(os-distribution = "debian" & os-version = "12" & arch = "x86_32")
